exports[`BpkBannerAlert should render correctly with "type" attribute equal to "error" 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--error">
  <header
    className="bpk-banner-alert__header"
    onClick={[Function bound onExpand]}>
    <span
      className="bpk-banner-alert__icon">
      <svg
        className="bpk-icon--align-to-button"
        fill="rgb(255, 84, 82)"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M9 1C4.6 1 1 4.6 1 9s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zm1 12.4c0 .3-.3.6-.6.6h-.8c-.3 0-.6-.3-.6-.6V8.6c0-.3.3-.6.6-.6h.7c.4 0 .7.3.7.6v4.8zm0-8.1c0 .4-.3.7-.7.7h-.6c-.4 0-.7-.3-.7-.7v-.6c0-.4.3-.7.7-.7h.7c.3 0 .6.3.6.7v.6z" />
      </svg>
    </span>
     
    <span
      className="bpk-banner-alert__message">
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </span>
     
  </header>
</section>
`;

exports[`BpkBannerAlert should render correctly with "type" attribute equal to "success" 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--success">
  <header
    className="bpk-banner-alert__header"
    onClick={[Function bound onExpand]}>
    <span
      className="bpk-banner-alert__icon">
      <svg
        className="bpk-icon--align-to-button"
        fill="rgb(0, 215, 117)"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M9.003 1a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm4.373 5.778l-4.927 5.624a1.03 1.03 0 0 1-1.45.099L4.68 10.517a.516.516 0 0 1-.05-.727l.675-.777a.515.515 0 0 1 .726-.051l1.388 1.175a.206.206 0 0 0 .291-.02l4.116-4.697a.514.514 0 0 1 .725-.05l.001.001.775.678c.214.19.236.515.049.729z" />
      </svg>
    </span>
     
    <span
      className="bpk-banner-alert__message">
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </span>
     
  </header>
</section>
`;

exports[`BpkBannerAlert should render correctly with "type" attribute equal to "warn" 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--warn">
  <header
    className="bpk-banner-alert__header"
    onClick={[Function bound onExpand]}>
    <span
      className="bpk-banner-alert__icon">
      <svg
        className="bpk-icon--align-to-button"
        fill="rgb(255, 212, 69)"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M9 1C4.6 1 1 4.6 1 9s3.6 8 8 8 8-3.6 8-8-3.6-8-8-8zm1 12.4c0 .3-.3.6-.6.6h-.8c-.3 0-.6-.3-.6-.6V8.6c0-.3.3-.6.6-.6h.7c.4 0 .7.3.7.6v4.8zm0-8.1c0 .4-.3.7-.7.7h-.6c-.4 0-.7-.3-.7-.7v-.6c0-.4.3-.7.7-.7h.7c.3 0 .6.3.6.7v.6z" />
      </svg>
    </span>
     
    <span
      className="bpk-banner-alert__message">
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </span>
     
  </header>
</section>
`;

exports[`BpkBannerAlert should render correctly with child nodes 1`] = `
<section
  className="bpk-banner-alert bpk-banner-alert--success">
  <header
    className="bpk-banner-alert__header bpk-banner-alert__header--expandable"
    onClick={[Function bound onExpand]}>
    <span
      className="bpk-banner-alert__icon">
      <svg
        className="bpk-icon--align-to-button"
        fill="rgb(0, 215, 117)"
        height="18"
        viewBox="0 0 18 18"
        width="18"
        xmlns="http://www.w3.org/2000/svg">
        <path
          d="M9.003 1a8 8 0 1 0 0 16 8 8 0 0 0 0-16zm4.373 5.778l-4.927 5.624a1.03 1.03 0 0 1-1.45.099L4.68 10.517a.516.516 0 0 1-.05-.727l.675-.777a.515.515 0 0 1 .726-.051l1.388 1.175a.206.206 0 0 0 .291-.02l4.116-4.697a.514.514 0 0 1 .725-.05l.001.001.775.678c.214.19.236.515.049.729z" />
      </svg>
    </span>
     
    <span
      className="bpk-banner-alert__message">
      Lorem ipsum dolor sit amet, consectetuer adipiscing elit.
    </span>
     
    <span
      className="bpk-banner-alert__toggle">
      <button
        aria-expanded={false}
        aria-label="View more"
        className="bpk-banner-alert__toggle-button"
        title="View more">
        <svg
          className="bpk-icon--align-to-button"
          fill="rgb(82, 76, 97)"
          height="18"
          viewBox="0 0 18 18"
          width="18"
          xmlns="http://www.w3.org/2000/svg">
          <path
            d="M1 6.5c0 .4.2.8.5 1.1l5.2 4.5c1.3 1.1 3.3 1.1 4.6 0l5.2-4.5c.6-.5.7-1.5.1-2.1-.5-.6-1.5-.7-2.1-.1L9.3 9.9c-.1.1-.5.1-.6 0L3.5 5.4c-.6-.6-1.6-.5-2.1.1-.3.3-.4.6-.4 1z" />
        </svg>
      </button>
    </span>
  </header>
</section>
`;
